crates/carta/tests/snapshots/golden_writer__markdown__table__table-align-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
  -------------------------------------------------------------------------
  l                           r           c           d
  -------------- -------------- --------------------- ---------------------
  1                           2           3           4

  -------------------------------------------------------------------------
