crates/carta/tests/snapshots/golden_writer__markdown__table__table-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
  h1   h2
  ---- ----
  a    b

  : Captioned and attributed {#tbl .fancy key="value"}
