crates/carta/tests/snapshots/golden_writer__markdown__table__table-empty-cell.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
+----------------------+--------+----+----+
| A                    | B      | C  | D  |
+======================+========+====+====+
| <!-- placeholder --> | \vskip | -  | ok |
|                      |        | -  |    |
+----------------------+--------+----+----+
